--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@ target/
 !.mvn/wrapper/maven-wrapper.jar
 !**/src/main/**
 !**/src/test/**
+application.properties
 
 ### STS ###
 .apt_generated
@@ -18,6 +19,7 @@ target/
 *.iws
 *.iml
 *.ipr
+*.mvn
 
 ### NetBeans ###
 /nbproject/private/
