--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,17 @@
 spring.data.mongodb.host=localhost
 spring.data.mongodb.port=27017
 spring.data.mongodb.database=teste
+spring.data.solr.host=http://localhost:8983/solr
 
 spring.jackson.property-naming-strategy=SNAKE_CASE
+
+
+spring.rabbitmq.host=localhost
+spring.rabbitmq.port=5672
+spring.rabbitmq.username=guest
+spring.rabbitmq.password=guest
+javainuse.rabbitmq.exchange=javainuse.exchange
+javainuse.rabbitmq.queue=javainuse.queue
+javainuse.rabbitmq.routingkey=javainuse.routingkey
+
+server.port=8081
